--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <title>Portfolio</title>
+        <title>Portfolio Website</title>
+
     </head>
     <body>
 
@@ -374,7 +375,7 @@
         <section class="testimonial"><div
                 class="container">
 
-                <h4 class="section--head">testimonials</h4>
+                <h4 class="section--head">Testimonials</h4>
 
                 <h2 class="section--title">What People Say About Me</h2>
 
